_generated-doc/2.7/config/quarkus-oidc-client-oidc-clients-config.adoc
[.configuration-legend]
icon:lock[title=Fixed at build time] Configuration property fixed at build time - All other configuration properties are overridable at runtime
[.configuration-reference, cols="80,.^10,.^10"]
|===

h|[[quarkus-oidc-client-oidc-clients-config_configuration]]link:#quarkus-oidc-client-oidc-clients-config_configuration[Configuration property]

h|Type
h|Default

a| [[quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.auth-server-url]]`link:#quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.auth-server-url[quarkus.oidc-client.auth-server-url]`

[.description]
--
The base URL of the OpenID Connect (OIDC) server, for example, `https://host:port/auth`. OIDC discovery endpoint will be called by default by appending a '.well-known/openid-configuration' path to this URL. Note if you work with Keycloak OIDC server, make sure the base URL is in the following format: `https://host:port/auth/realms/++{++realm++}++` where `++{++realm++}++` has to be replaced by the name of the Keycloak realm.
--|string 
|


a| [[quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.discovery-enabled]]`link:#quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.discovery-enabled[quarkus.oidc-client.discovery-enabled]`

[.description]
--
Enables OIDC discovery. If the discovery is disabled then the OIDC endpoint URLs must be configured individually.
--|boolean 
|`true`


a| [[quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.token-path]]`link:#quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.token-path[quarkus.oidc-client.token-path]`

[.description]
--
Relative path or absolute URL of the OIDC token endpoint which issues access and refresh tokens.
--|string 
|


a| [[quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.client-id]]`link:#quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.client-id[quarkus.oidc-client.client-id]`

[.description]
--
The client-id of the application. Each application has a client-id that is used to identify the application
--|string 
|


a| [[quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.connection-delay]]`link:#quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.connection-delay[quarkus.oidc-client.connection-delay]`

[.description]
--
The maximum amount of time connecting to the currently unavailable OIDC server will be attempted for. The number of times the connection request will be repeated is calculated by dividing the value of this property by 2. For example, setting it to `20S` will allow for requesting the connection up to 10 times with a 2 seconds delay between the retries. Note this property is only effective when the initial OIDC connection is created, for example, when requesting a well-known OIDC configuration. Use the 'connection-retry-count' property to support trying to re-establish an already available connection which may have been dropped.
--|link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html[Duration]
  link:#duration-note-anchor[icon:question-circle[], title=More information about the Duration format]
|


a| [[quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.connection-retry-count]]`link:#quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.connection-retry-count[quarkus.oidc-client.connection-retry-count]`

[.description]
--
The number of times an attempt to re-establish an already available connection will be repeated for. Note this property is different to the `connection-delay` property which is only effective during the initial OIDC connection creation. This property is used to try to recover the existing connection which may have been temporarily lost. For example, if a request to the OIDC token endpoint fails due to a connection exception then the request will be retried for a number of times configured by this property.
--|int 
|`3`


a| [[quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.connection-timeout]]`link:#quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.connection-timeout[quarkus.oidc-client.connection-timeout]`

[.description]
--
The amount of time after which the current OIDC connection request will time out.
--|link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html[Duration]
  link:#duration-note-anchor[icon:question-circle[], title=More information about the Duration format]
|`10S`


a| [[quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.max-pool-size]]`link:#quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.max-pool-size[quarkus.oidc-client.max-pool-size]`

[.description]
--
The maximum size of the connection pool used by the WebClient
--|int 
|


a| [[quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.credentials.secret]]`link:#quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.credentials.secret[quarkus.oidc-client.credentials.secret]`

[.description]
--
Client secret which is used for a `client_secret_basic` authentication method. Note that a 'client-secret.value' can be used instead but both properties are mutually exclusive.
--|string 
|


a| [[quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.credentials.client-secret.value]]`link:#quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.credentials.client-secret.value[quarkus.oidc-client.credentials.client-secret.value]`

[.description]
--
The client secret value - it will be ignored if 'secret.key' is set
--|string 
|


a| [[quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.credentials.client-secret.provider.name]]`link:#quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.credentials.client-secret.provider.name[quarkus.oidc-client.credentials.client-secret.provider.name]`

[.description]
--
The CredentialsProvider name which should only be set if more than one CredentialsProvider is registered
--|string 
|


a| [[quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.credentials.client-secret.provider.key]]`link:#quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.credentials.client-secret.provider.key[quarkus.oidc-client.credentials.client-secret.provider.key]`

[.description]
--
The CredentialsProvider client secret key
--|string 
|


a| [[quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.credentials.client-secret.method]]`link:#quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.credentials.client-secret.method[quarkus.oidc-client.credentials.client-secret.method]`

[.description]
--
Authentication method.
--|`basic`, `post`, `post-jwt` 
|


a| [[quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.credentials.jwt.secret]]`link:#quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.credentials.jwt.secret[quarkus.oidc-client.credentials.jwt.secret]`

[.description]
--
If provided, indicates that JWT is signed using a secret key
--|string 
|


a| [[quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.credentials.jwt.secret-provider.name]]`link:#quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.credentials.jwt.secret-provider.name[quarkus.oidc-client.credentials.jwt.secret-provider.name]`

[.description]
--
The CredentialsProvider name which should only be set if more than one CredentialsProvider is registered
--|string 
|


a| [[quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.credentials.jwt.secret-provider.key]]`link:#quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.credentials.jwt.secret-provider.key[quarkus.oidc-client.credentials.jwt.secret-provider.key]`

[.description]
--
The CredentialsProvider client secret key
--|string 
|


a| [[quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.credentials.jwt.key-file]]`link:#quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.credentials.jwt.key-file[quarkus.oidc-client.credentials.jwt.key-file]`

[.description]
--
If provided, indicates that JWT is signed using a private key in PEM or JWK format. You can use the `signature-algorithm` property to specify the key algorithm.
--|string 
|


a| [[quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.credentials.jwt.key-store-file]]`link:#quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.credentials.jwt.key-store-file[quarkus.oidc-client.credentials.jwt.key-store-file]`

[.description]
--
If provided, indicates that JWT is signed using a private key from a key store
--|string 
|


a| [[quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.credentials.jwt.key-store-password]]`link:#quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.credentials.jwt.key-store-password[quarkus.oidc-client.credentials.jwt.key-store-password]`

[.description]
--
A parameter to specify the password of the key store file. If not given, the default ("password") is used.
--|string 
|`password`


a| [[quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.credentials.jwt.key-id]]`link:#quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.credentials.jwt.key-id[quarkus.oidc-client.credentials.jwt.key-id]`

[.description]
--
The private key id/alias
--|string 
|


a| [[quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.credentials.jwt.key-password]]`link:#quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.credentials.jwt.key-password[quarkus.oidc-client.credentials.jwt.key-password]`

[.description]
--
The private key password
--|string 
|`password`


a| [[quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.credentials.jwt.audience]]`link:#quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.credentials.jwt.audience[quarkus.oidc-client.credentials.jwt.audience]`

[.description]
--
JWT audience ('aud') claim value. By default the audience is set to the address of the OpenId Connect Provider's token endpoint.
--|string 
|


a| [[quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.credentials.jwt.token-key-id]]`link:#quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.credentials.jwt.token-key-id[quarkus.oidc-client.credentials.jwt.token-key-id]`

[.description]
--
Key identifier of the signing key added as a JWT 'kid' header
--|string 
|


a| [[quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.credentials.jwt.issuer]]`link:#quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.credentials.jwt.issuer[quarkus.oidc-client.credentials.jwt.issuer]`

[.description]
--
Issuer of the signing key added as a JWT 'iss' claim (default: client id)
--|string 
|


a| [[quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.credentials.jwt.subject]]`link:#quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.credentials.jwt.subject[quarkus.oidc-client.credentials.jwt.subject]`

[.description]
--
Subject of the signing key added as a JWT 'sub' claim (default: client id)
--|string 
|


a| [[quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.credentials.jwt.signature-algorithm]]`link:#quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.credentials.jwt.signature-algorithm[quarkus.oidc-client.credentials.jwt.signature-algorithm]`

[.description]
--
Signature algorithm, also used for the `key-file` property. Supported values: RS256, RS384, RS512, PS256, PS384, PS512, ES256, ES384, ES512, HS256, HS384, HS512.
--|string 
|


a| [[quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.credentials.jwt.lifespan]]`link:#quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.credentials.jwt.lifespan[quarkus.oidc-client.credentials.jwt.lifespan]`

[.description]
--
JWT life-span in seconds. It will be added to the time it was issued at to calculate the expiration time.
--|int 
|`10`


a| [[quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.proxy.host]]`link:#quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.proxy.host[quarkus.oidc-client.proxy.host]`

[.description]
--
The host (name or IP address) of the Proxy.
 Note: If OIDC adapter needs to use a Proxy to talk with OIDC server (Provider), then at least the "host" config item must be configured to enable the usage of a Proxy.
--|string 
|


a| [[quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.proxy.port]]`link:#quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.proxy.port[quarkus.oidc-client.proxy.port]`

[.description]
--
The port number of the Proxy. Default value is 80.
--|int 
|`80`


a| [[quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.proxy.username]]`link:#quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.proxy.username[quarkus.oidc-client.proxy.username]`

[.description]
--
The username, if Proxy needs authentication.
--|string 
|


a| [[quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.proxy.password]]`link:#quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.proxy.password[quarkus.oidc-client.proxy.password]`

[.description]
--
The password, if Proxy needs authentication.
--|string 
|


a| [[quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.tls.verification]]`link:#quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.tls.verification[quarkus.oidc-client.tls.verification]`

[.description]
--
Certificate validation and hostname verification, which can be one of the following values from enum `Verification`. Default is required.
--|`required`, `certificate-validation`, `none` 
|


a| [[quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.tls.key-store-file]]`link:#quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.tls.key-store-file[quarkus.oidc-client.tls.key-store-file]`

[.description]
--
An optional key store which holds the certificate information instead of specifying separate files.
--|path 
|


a| [[quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.tls.key-store-file-type]]`link:#quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.tls.key-store-file-type[quarkus.oidc-client.tls.key-store-file-type]`

[.description]
--
An optional parameter to specify type of the key store file. If not given, the type is automatically detected based on the file name.
--|string 
|


a| [[quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.tls.key-store-provider]]`link:#quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.tls.key-store-provider[quarkus.oidc-client.tls.key-store-provider]`

[.description]
--
An optional parameter to specify a provider of the key store file. If not given, the provider is automatically detected based on the key store file type.
--|string 
|


a| [[quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.tls.key-store-password]]`link:#quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.tls.key-store-password[quarkus.oidc-client.tls.key-store-password]`

[.description]
--
A parameter to specify the password of the key store file. If not given, the default ("password") is used.
--|string 
|`password`


a| [[quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.tls.key-store-key-alias]]`link:#quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.tls.key-store-key-alias[quarkus.oidc-client.tls.key-store-key-alias]`

[.description]
--
An optional parameter to select a specific key in the key store. When SNI is disabled, if the key store contains multiple keys and no alias is specified, the behavior is undefined.
--|string 
|


a| [[quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.tls.key-store-key-password]]`link:#quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.tls.key-store-key-password[quarkus.oidc-client.tls.key-store-key-password]`

[.description]
--
An optional parameter to define the password for the key, in case it's different from `key-store-password`.
--|string 
|


a| [[quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.tls.trust-store-file]]`link:#quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.tls.trust-store-file[quarkus.oidc-client.tls.trust-store-file]`

[.description]
--
An optional trust store which holds the certificate information of the certificates to trust
--|path 
|


a| [[quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.tls.trust-store-password]]`link:#quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.tls.trust-store-password[quarkus.oidc-client.tls.trust-store-password]`

[.description]
--
A parameter to specify the password of the trust store file.
--|string 
|


a| [[quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.tls.trust-store-cert-alias]]`link:#quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.tls.trust-store-cert-alias[quarkus.oidc-client.tls.trust-store-cert-alias]`

[.description]
--
A parameter to specify the alias of the trust store certificate.
--|string 
|


a| [[quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.tls.trust-store-file-type]]`link:#quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.tls.trust-store-file-type[quarkus.oidc-client.tls.trust-store-file-type]`

[.description]
--
An optional parameter to specify type of the trust store file. If not given, the type is automatically detected based on the file name.
--|string 
|


a| [[quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.tls.trust-store-provider]]`link:#quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.tls.trust-store-provider[quarkus.oidc-client.tls.trust-store-provider]`

[.description]
--
An optional parameter to specify a provider of the trust store file. If not given, the provider is automatically detected based on the trust store file type.
--|string 
|


a| [[quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.id]]`link:#quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.id[quarkus.oidc-client.id]`

[.description]
--
A unique OIDC client identifier. It must be set when OIDC clients are created dynamically and is optional in all other cases.
--|string 
|


a| [[quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.client-enabled]]`link:#quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.client-enabled[quarkus.oidc-client.client-enabled]`

[.description]
--
If this client configuration is enabled.
--|boolean 
|`true`


a| [[quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.scopes]]`link:#quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.scopes[quarkus.oidc-client.scopes]`

[.description]
--
List of access token scopes
--|list of string 
|


a| [[quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.refresh-token-time-skew]]`link:#quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.refresh-token-time-skew[quarkus.oidc-client.refresh-token-time-skew]`

[.description]
--
Refresh token time skew in seconds. If this property is enabled then the configured number of seconds is added to the current time when checking whether the access token should be refreshed. If the sum is greater than this access token's expiration time then a refresh is going to happen.
--|link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html[Duration]
  link:#duration-note-anchor[icon:question-circle[], title=More information about the Duration format]
|


a| [[quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.absolute-expires-in]]`link:#quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.absolute-expires-in[quarkus.oidc-client.absolute-expires-in]`

[.description]
--
If the access token 'expires_in' property should be checked as an absolute time value as opposed to a duration relative to the current time.
--|boolean 
|`false`


a| [[quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.grant.type]]`link:#quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.grant.type[quarkus.oidc-client.grant.type]`

[.description]
--
Grant type
--|`client`, `password`, `code`, `exchange`, `refresh` 
|`client`


a| [[quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.grant.access-token-property]]`link:#quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.grant.access-token-property[quarkus.oidc-client.grant.access-token-property]`

[.description]
--
Access token property name in a token grant response
--|string 
|`access_token`


a| [[quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.grant.refresh-token-property]]`link:#quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.grant.refresh-token-property[quarkus.oidc-client.grant.refresh-token-property]`

[.description]
--
Refresh token property name in a token grant response
--|string 
|`refresh_token`


a| [[quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.grant.expires-in-property]]`link:#quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.grant.expires-in-property[quarkus.oidc-client.grant.expires-in-property]`

[.description]
--
Access token expiry property name in a token grant response
--|string 
|`expires_in`


a| [[quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.grant.refresh-expires-in-property]]`link:#quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.grant.refresh-expires-in-property[quarkus.oidc-client.grant.refresh-expires-in-property]`

[.description]
--
Refresh token expiry property name in a token grant response
--|string 
|`refresh_expires_in`


a| [[quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.early-tokens-acquisition]]`link:#quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.early-tokens-acquisition[quarkus.oidc-client.early-tokens-acquisition]`

[.description]
--
Requires that all filters which use 'OidcClient' acquire the tokens at the post-construct initialization time, possibly long before these tokens are used. This property should be disabled if the access token may expire before it is used for the first time and no refresh token is available.
--|boolean 
|`true`


a| [[quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.grant-options-grant-options]]`link:#quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.grant-options-grant-options[quarkus.oidc-client.grant-options]`

[.description]
--
Grant options
--|`Map<String,Map<String,String>>` 
|


a| [[quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.headers-headers]]`link:#quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.headers-headers[quarkus.oidc-client.headers]`

[.description]
--
Custom HTTP headers which have to be sent to the token endpoint
--|`Map<String,String>` 
|


h|[[quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.named-clients-additional-named-clients]]link:#quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.named-clients-additional-named-clients[Additional named clients]

h|Type
h|Default

a| [[quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.-id-.auth-server-url]]`link:#quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.-id-.auth-server-url[quarkus.oidc-client."id".auth-server-url]`

[.description]
--
The base URL of the OpenID Connect (OIDC) server, for example, `https://host:port/auth`. OIDC discovery endpoint will be called by default by appending a '.well-known/openid-configuration' path to this URL. Note if you work with Keycloak OIDC server, make sure the base URL is in the following format: `https://host:port/auth/realms/++{++realm++}++` where `++{++realm++}++` has to be replaced by the name of the Keycloak realm.
--|string 
|


a| [[quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.-id-.discovery-enabled]]`link:#quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.-id-.discovery-enabled[quarkus.oidc-client."id".discovery-enabled]`

[.description]
--
Enables OIDC discovery. If the discovery is disabled then the OIDC endpoint URLs must be configured individually.
--|boolean 
|`true`


a| [[quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.-id-.token-path]]`link:#quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.-id-.token-path[quarkus.oidc-client."id".token-path]`

[.description]
--
Relative path or absolute URL of the OIDC token endpoint which issues access and refresh tokens.
--|string 
|


a| [[quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.-id-.client-id]]`link:#quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.-id-.client-id[quarkus.oidc-client."id".client-id]`

[.description]
--
The client-id of the application. Each application has a client-id that is used to identify the application
--|string 
|


a| [[quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.-id-.connection-delay]]`link:#quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.-id-.connection-delay[quarkus.oidc-client."id".connection-delay]`

[.description]
--
The maximum amount of time connecting to the currently unavailable OIDC server will be attempted for. The number of times the connection request will be repeated is calculated by dividing the value of this property by 2. For example, setting it to `20S` will allow for requesting the connection up to 10 times with a 2 seconds delay between the retries. Note this property is only effective when the initial OIDC connection is created, for example, when requesting a well-known OIDC configuration. Use the 'connection-retry-count' property to support trying to re-establish an already available connection which may have been dropped.
--|link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html[Duration]
  link:#duration-note-anchor[icon:question-circle[], title=More information about the Duration format]
|


a| [[quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.-id-.connection-retry-count]]`link:#quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.-id-.connection-retry-count[quarkus.oidc-client."id".connection-retry-count]`

[.description]
--
The number of times an attempt to re-establish an already available connection will be repeated for. Note this property is different to the `connection-delay` property which is only effective during the initial OIDC connection creation. This property is used to try to recover the existing connection which may have been temporarily lost. For example, if a request to the OIDC token endpoint fails due to a connection exception then the request will be retried for a number of times configured by this property.
--|int 
|`3`


a| [[quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.-id-.connection-timeout]]`link:#quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.-id-.connection-timeout[quarkus.oidc-client."id".connection-timeout]`

[.description]
--
The amount of time after which the current OIDC connection request will time out.
--|link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html[Duration]
  link:#duration-note-anchor[icon:question-circle[], title=More information about the Duration format]
|`10S`


a| [[quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.-id-.max-pool-size]]`link:#quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.-id-.max-pool-size[quarkus.oidc-client."id".max-pool-size]`

[.description]
--
The maximum size of the connection pool used by the WebClient
--|int 
|


a| [[quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.-id-.credentials.secret]]`link:#quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.-id-.credentials.secret[quarkus.oidc-client."id".credentials.secret]`

[.description]
--
Client secret which is used for a `client_secret_basic` authentication method. Note that a 'client-secret.value' can be used instead but both properties are mutually exclusive.
--|string 
|


a| [[quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.-id-.credentials.client-secret.value]]`link:#quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.-id-.credentials.client-secret.value[quarkus.oidc-client."id".credentials.client-secret.value]`

[.description]
--
The client secret value - it will be ignored if 'secret.key' is set
--|string 
|


a| [[quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.-id-.credentials.client-secret.provider.name]]`link:#quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.-id-.credentials.client-secret.provider.name[quarkus.oidc-client."id".credentials.client-secret.provider.name]`

[.description]
--
The CredentialsProvider name which should only be set if more than one CredentialsProvider is registered
--|string 
|


a| [[quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.-id-.credentials.client-secret.provider.key]]`link:#quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.-id-.credentials.client-secret.provider.key[quarkus.oidc-client."id".credentials.client-secret.provider.key]`

[.description]
--
The CredentialsProvider client secret key
--|string 
|


a| [[quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.-id-.credentials.client-secret.method]]`link:#quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.-id-.credentials.client-secret.method[quarkus.oidc-client."id".credentials.client-secret.method]`

[.description]
--
Authentication method.
--|`basic`, `post`, `post-jwt` 
|


a| [[quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.-id-.credentials.jwt.secret]]`link:#quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.-id-.credentials.jwt.secret[quarkus.oidc-client."id".credentials.jwt.secret]`

[.description]
--
If provided, indicates that JWT is signed using a secret key
--|string 
|


a| [[quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.-id-.credentials.jwt.secret-provider.name]]`link:#quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.-id-.credentials.jwt.secret-provider.name[quarkus.oidc-client."id".credentials.jwt.secret-provider.name]`

[.description]
--
The CredentialsProvider name which should only be set if more than one CredentialsProvider is registered
--|string 
|


a| [[quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.-id-.credentials.jwt.secret-provider.key]]`link:#quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.-id-.credentials.jwt.secret-provider.key[quarkus.oidc-client."id".credentials.jwt.secret-provider.key]`

[.description]
--
The CredentialsProvider client secret key
--|string 
|


a| [[quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.-id-.credentials.jwt.key-file]]`link:#quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.-id-.credentials.jwt.key-file[quarkus.oidc-client."id".credentials.jwt.key-file]`

[.description]
--
If provided, indicates that JWT is signed using a private key in PEM or JWK format. You can use the `signature-algorithm` property to specify the key algorithm.
--|string 
|


a| [[quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.-id-.credentials.jwt.key-store-file]]`link:#quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.-id-.credentials.jwt.key-store-file[quarkus.oidc-client."id".credentials.jwt.key-store-file]`

[.description]
--
If provided, indicates that JWT is signed using a private key from a key store
--|string 
|


a| [[quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.-id-.credentials.jwt.key-store-password]]`link:#quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.-id-.credentials.jwt.key-store-password[quarkus.oidc-client."id".credentials.jwt.key-store-password]`

[.description]
--
A parameter to specify the password of the key store file. If not given, the default ("password") is used.
--|string 
|`password`


a| [[quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.-id-.credentials.jwt.key-id]]`link:#quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.-id-.credentials.jwt.key-id[quarkus.oidc-client."id".credentials.jwt.key-id]`

[.description]
--
The private key id/alias
--|string 
|


a| [[quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.-id-.credentials.jwt.key-password]]`link:#quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.-id-.credentials.jwt.key-password[quarkus.oidc-client."id".credentials.jwt.key-password]`

[.description]
--
The private key password
--|string 
|`password`


a| [[quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.-id-.credentials.jwt.audience]]`link:#quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.-id-.credentials.jwt.audience[quarkus.oidc-client."id".credentials.jwt.audience]`

[.description]
--
JWT audience ('aud') claim value. By default the audience is set to the address of the OpenId Connect Provider's token endpoint.
--|string 
|


a| [[quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.-id-.credentials.jwt.token-key-id]]`link:#quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.-id-.credentials.jwt.token-key-id[quarkus.oidc-client."id".credentials.jwt.token-key-id]`

[.description]
--
Key identifier of the signing key added as a JWT 'kid' header
--|string 
|


a| [[quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.-id-.credentials.jwt.issuer]]`link:#quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.-id-.credentials.jwt.issuer[quarkus.oidc-client."id".credentials.jwt.issuer]`

[.description]
--
Issuer of the signing key added as a JWT 'iss' claim (default: client id)
--|string 
|


a| [[quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.-id-.credentials.jwt.subject]]`link:#quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.-id-.credentials.jwt.subject[quarkus.oidc-client."id".credentials.jwt.subject]`

[.description]
--
Subject of the signing key added as a JWT 'sub' claim (default: client id)
--|string 
|


a| [[quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.-id-.credentials.jwt.signature-algorithm]]`link:#quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.-id-.credentials.jwt.signature-algorithm[quarkus.oidc-client."id".credentials.jwt.signature-algorithm]`

[.description]
--
Signature algorithm, also used for the `key-file` property. Supported values: RS256, RS384, RS512, PS256, PS384, PS512, ES256, ES384, ES512, HS256, HS384, HS512.
--|string 
|


a| [[quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.-id-.credentials.jwt.lifespan]]`link:#quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.-id-.credentials.jwt.lifespan[quarkus.oidc-client."id".credentials.jwt.lifespan]`

[.description]
--
JWT life-span in seconds. It will be added to the time it was issued at to calculate the expiration time.
--|int 
|`10`


a| [[quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.-id-.proxy.host]]`link:#quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.-id-.proxy.host[quarkus.oidc-client."id".proxy.host]`

[.description]
--
The host (name or IP address) of the Proxy.
 Note: If OIDC adapter needs to use a Proxy to talk with OIDC server (Provider), then at least the "host" config item must be configured to enable the usage of a Proxy.
--|string 
|


a| [[quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.-id-.proxy.port]]`link:#quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.-id-.proxy.port[quarkus.oidc-client."id".proxy.port]`

[.description]
--
The port number of the Proxy. Default value is 80.
--|int 
|`80`


a| [[quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.-id-.proxy.username]]`link:#quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.-id-.proxy.username[quarkus.oidc-client."id".proxy.username]`

[.description]
--
The username, if Proxy needs authentication.
--|string 
|


a| [[quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.-id-.proxy.password]]`link:#quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.-id-.proxy.password[quarkus.oidc-client."id".proxy.password]`

[.description]
--
The password, if Proxy needs authentication.
--|string 
|


a| [[quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.-id-.tls.verification]]`link:#quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.-id-.tls.verification[quarkus.oidc-client."id".tls.verification]`

[.description]
--
Certificate validation and hostname verification, which can be one of the following values from enum `Verification`. Default is required.
--|`required`, `certificate-validation`, `none` 
|


a| [[quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.-id-.tls.key-store-file]]`link:#quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.-id-.tls.key-store-file[quarkus.oidc-client."id".tls.key-store-file]`

[.description]
--
An optional key store which holds the certificate information instead of specifying separate files.
--|path 
|


a| [[quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.-id-.tls.key-store-file-type]]`link:#quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.-id-.tls.key-store-file-type[quarkus.oidc-client."id".tls.key-store-file-type]`

[.description]
--
An optional parameter to specify type of the key store file. If not given, the type is automatically detected based on the file name.
--|string 
|


a| [[quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.-id-.tls.key-store-provider]]`link:#quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.-id-.tls.key-store-provider[quarkus.oidc-client."id".tls.key-store-provider]`

[.description]
--
An optional parameter to specify a provider of the key store file. If not given, the provider is automatically detected based on the key store file type.
--|string 
|


a| [[quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.-id-.tls.key-store-password]]`link:#quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.-id-.tls.key-store-password[quarkus.oidc-client."id".tls.key-store-password]`

[.description]
--
A parameter to specify the password of the key store file. If not given, the default ("password") is used.
--|string 
|`password`


a| [[quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.-id-.tls.key-store-key-alias]]`link:#quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.-id-.tls.key-store-key-alias[quarkus.oidc-client."id".tls.key-store-key-alias]`

[.description]
--
An optional parameter to select a specific key in the key store. When SNI is disabled, if the key store contains multiple keys and no alias is specified, the behavior is undefined.
--|string 
|


a| [[quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.-id-.tls.key-store-key-password]]`link:#quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.-id-.tls.key-store-key-password[quarkus.oidc-client."id".tls.key-store-key-password]`

[.description]
--
An optional parameter to define the password for the key, in case it's different from `key-store-password`.
--|string 
|


a| [[quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.-id-.tls.trust-store-file]]`link:#quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.-id-.tls.trust-store-file[quarkus.oidc-client."id".tls.trust-store-file]`

[.description]
--
An optional trust store which holds the certificate information of the certificates to trust
--|path 
|


a| [[quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.-id-.tls.trust-store-password]]`link:#quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.-id-.tls.trust-store-password[quarkus.oidc-client."id".tls.trust-store-password]`

[.description]
--
A parameter to specify the password of the trust store file.
--|string 
|


a| [[quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.-id-.tls.trust-store-cert-alias]]`link:#quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.-id-.tls.trust-store-cert-alias[quarkus.oidc-client."id".tls.trust-store-cert-alias]`

[.description]
--
A parameter to specify the alias of the trust store certificate.
--|string 
|


a| [[quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.-id-.tls.trust-store-file-type]]`link:#quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.-id-.tls.trust-store-file-type[quarkus.oidc-client."id".tls.trust-store-file-type]`

[.description]
--
An optional parameter to specify type of the trust store file. If not given, the type is automatically detected based on the file name.
--|string 
|


a| [[quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.-id-.tls.trust-store-provider]]`link:#quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.-id-.tls.trust-store-provider[quarkus.oidc-client."id".tls.trust-store-provider]`

[.description]
--
An optional parameter to specify a provider of the trust store file. If not given, the provider is automatically detected based on the trust store file type.
--|string 
|


a| [[quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.-id-.id]]`link:#quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.-id-.id[quarkus.oidc-client."id".id]`

[.description]
--
A unique OIDC client identifier. It must be set when OIDC clients are created dynamically and is optional in all other cases.
--|string 
|


a| [[quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.-id-.client-enabled]]`link:#quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.-id-.client-enabled[quarkus.oidc-client."id".client-enabled]`

[.description]
--
If this client configuration is enabled.
--|boolean 
|`true`


a| [[quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.-id-.scopes]]`link:#quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.-id-.scopes[quarkus.oidc-client."id".scopes]`

[.description]
--
List of access token scopes
--|list of string 
|


a| [[quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.-id-.refresh-token-time-skew]]`link:#quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.-id-.refresh-token-time-skew[quarkus.oidc-client."id".refresh-token-time-skew]`

[.description]
--
Refresh token time skew in seconds. If this property is enabled then the configured number of seconds is added to the current time when checking whether the access token should be refreshed. If the sum is greater than this access token's expiration time then a refresh is going to happen.
--|link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html[Duration]
  link:#duration-note-anchor[icon:question-circle[], title=More information about the Duration format]
|


a| [[quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.-id-.absolute-expires-in]]`link:#quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.-id-.absolute-expires-in[quarkus.oidc-client."id".absolute-expires-in]`

[.description]
--
If the access token 'expires_in' property should be checked as an absolute time value as opposed to a duration relative to the current time.
--|boolean 
|`false`


a| [[quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.-id-.grant.type]]`link:#quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.-id-.grant.type[quarkus.oidc-client."id".grant.type]`

[.description]
--
Grant type
--|`client`, `password`, `code`, `exchange`, `refresh` 
|`client`


a| [[quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.-id-.grant.access-token-property]]`link:#quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.-id-.grant.access-token-property[quarkus.oidc-client."id".grant.access-token-property]`

[.description]
--
Access token property name in a token grant response
--|string 
|`access_token`


a| [[quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.-id-.grant.refresh-token-property]]`link:#quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.-id-.grant.refresh-token-property[quarkus.oidc-client."id".grant.refresh-token-property]`

[.description]
--
Refresh token property name in a token grant response
--|string 
|`refresh_token`


a| [[quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.-id-.grant.expires-in-property]]`link:#quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.-id-.grant.expires-in-property[quarkus.oidc-client."id".grant.expires-in-property]`

[.description]
--
Access token expiry property name in a token grant response
--|string 
|`expires_in`


a| [[quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.-id-.grant.refresh-expires-in-property]]`link:#quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.-id-.grant.refresh-expires-in-property[quarkus.oidc-client."id".grant.refresh-expires-in-property]`

[.description]
--
Refresh token expiry property name in a token grant response
--|string 
|`refresh_expires_in`


a| [[quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.-id-.grant-options-grant-options]]`link:#quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.-id-.grant-options-grant-options[quarkus.oidc-client."id".grant-options]`

[.description]
--
Grant options
--|`Map<String,Map<String,String>>` 
|


a| [[quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.-id-.early-tokens-acquisition]]`link:#quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.-id-.early-tokens-acquisition[quarkus.oidc-client."id".early-tokens-acquisition]`

[.description]
--
Requires that all filters which use 'OidcClient' acquire the tokens at the post-construct initialization time, possibly long before these tokens are used. This property should be disabled if the access token may expire before it is used for the first time and no refresh token is available.
--|boolean 
|`true`


a| [[quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.-id-.headers-headers]]`link:#quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.-id-.headers-headers[quarkus.oidc-client."id".headers]`

[.description]
--
Custom HTTP headers which have to be sent to the token endpoint
--|`Map<String,String>` 
|

|===
ifndef::no-duration-note[]
[NOTE]
[[duration-note-anchor]]
.About the Duration format
====
The format for durations uses the standard `java.time.Duration` format.
You can learn more about it in the link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html#parse-java.lang.CharSequence-[Duration#parse() javadoc].

You can also provide duration values starting with a number.
In this case, if the value consists only of a number, the converter treats the value as seconds.
Otherwise, `PT` is implicitly prepended to the value to obtain a standard `java.time.Duration` format.
====
endif::no-duration-note[]
