_generated-doc/3.2/config/quarkus-oidc-client-oidc-clients-config.adoc

:summaryTableId: quarkus-oidc-client-oidc-clients-config
[.configuration-legend]
icon:lock[title=Fixed at build time] Configuration property fixed at build time - All other configuration properties are overridable at runtime
[.configuration-reference, cols="80,.^10,.^10"]
|===

h|[[quarkus-oidc-client-oidc-clients-config_configuration]]link:#quarkus-oidc-client-oidc-clients-config_configuration[Configuration property]

h|Type
h|Default

a| [[quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.auth-server-url]]`link:#quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.auth-server-url[quarkus.oidc-client.auth-server-url]`


[.description]
--
The base URL of the OpenID Connect (OIDC) server, for example, `https://host:port/auth`. OIDC discovery endpoint will be called by default by appending a '.well-known/openid-configuration' path to this URL. Note if you work with Keycloak OIDC server, make sure the base URL is in the following format: `https://host:port/realms/++{++realm++}++` where `++{++realm++}++` has to be replaced by the name of the Keycloak realm.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OIDC_CLIENT_AUTH_SERVER_URL+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OIDC_CLIENT_AUTH_SERVER_URL+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.discovery-enabled]]`link:#quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.discovery-enabled[quarkus.oidc-client.discovery-enabled]`


[.description]
--
Enables OIDC discovery. If the discovery is disabled then the OIDC endpoint URLs must be configured individually.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OIDC_CLIENT_DISCOVERY_ENABLED+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OIDC_CLIENT_DISCOVERY_ENABLED+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`true`


a| [[quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.token-path]]`link:#quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.token-path[quarkus.oidc-client.token-path]`


[.description]
--
Relative path or absolute URL of the OIDC token endpoint which issues access and refresh tokens.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OIDC_CLIENT_TOKEN_PATH+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OIDC_CLIENT_TOKEN_PATH+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.revoke-path]]`link:#quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.revoke-path[quarkus.oidc-client.revoke-path]`


[.description]
--
Relative path or absolute URL of the OIDC token revocation endpoint.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OIDC_CLIENT_REVOKE_PATH+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OIDC_CLIENT_REVOKE_PATH+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.client-id]]`link:#quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.client-id[quarkus.oidc-client.client-id]`


[.description]
--
The client-id of the application. Each application has a client-id that is used to identify the application

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OIDC_CLIENT_CLIENT_ID+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OIDC_CLIENT_CLIENT_ID+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.connection-delay]]`link:#quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.connection-delay[quarkus.oidc-client.connection-delay]`


[.description]
--
The maximum amount of time connecting to the currently unavailable OIDC server will be attempted for. The number of times the connection request will be repeated is calculated by dividing the value of this property by 2. For example, setting it to `20S` will allow for requesting the connection up to 10 times with a 2 seconds delay between the retries. Note this property is only effective when the initial OIDC connection is created, for example, when requesting a well-known OIDC configuration. Use the 'connection-retry-count' property to support trying to re-establish an already available connection which may have been dropped.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OIDC_CLIENT_CONNECTION_DELAY+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OIDC_CLIENT_CONNECTION_DELAY+++`
endif::add-copy-button-to-env-var[]
--|link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html[Duration]
  link:#duration-note-anchor-{summaryTableId}[icon:question-circle[], title=More information about the Duration format]
|


a| [[quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.connection-retry-count]]`link:#quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.connection-retry-count[quarkus.oidc-client.connection-retry-count]`


[.description]
--
The number of times an attempt to re-establish an already available connection will be repeated for. Note this property is different to the `connection-delay` property which is only effective during the initial OIDC connection creation. This property is used to try to recover the existing connection which may have been temporarily lost. For example, if a request to the OIDC token endpoint fails due to a connection exception then the request will be retried for a number of times configured by this property.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OIDC_CLIENT_CONNECTION_RETRY_COUNT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OIDC_CLIENT_CONNECTION_RETRY_COUNT+++`
endif::add-copy-button-to-env-var[]
--|int 
|`3`


a| [[quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.connection-timeout]]`link:#quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.connection-timeout[quarkus.oidc-client.connection-timeout]`


[.description]
--
The amount of time after which the current OIDC connection request will time out.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OIDC_CLIENT_CONNECTION_TIMEOUT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OIDC_CLIENT_CONNECTION_TIMEOUT+++`
endif::add-copy-button-to-env-var[]
--|link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html[Duration]
  link:#duration-note-anchor-{summaryTableId}[icon:question-circle[], title=More information about the Duration format]
|`10S`


a| [[quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.max-pool-size]]`link:#quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.max-pool-size[quarkus.oidc-client.max-pool-size]`


[.description]
--
The maximum size of the connection pool used by the WebClient

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OIDC_CLIENT_MAX_POOL_SIZE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OIDC_CLIENT_MAX_POOL_SIZE+++`
endif::add-copy-button-to-env-var[]
--|int 
|


a| [[quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.credentials.secret]]`link:#quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.credentials.secret[quarkus.oidc-client.credentials.secret]`


[.description]
--
Client secret which is used for a `client_secret_basic` authentication method. Note that a 'client-secret.value' can be used instead but both properties are mutually exclusive.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OIDC_CLIENT_CREDENTIALS_SECRET+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OIDC_CLIENT_CREDENTIALS_SECRET+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.credentials.client-secret.value]]`link:#quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.credentials.client-secret.value[quarkus.oidc-client.credentials.client-secret.value]`


[.description]
--
The client secret value - it will be ignored if 'secret.key' is set

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OIDC_CLIENT_CREDENTIALS_CLIENT_SECRET_VALUE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OIDC_CLIENT_CREDENTIALS_CLIENT_SECRET_VALUE+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.credentials.client-secret.provider.name]]`link:#quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.credentials.client-secret.provider.name[quarkus.oidc-client.credentials.client-secret.provider.name]`


[.description]
--
The CredentialsProvider name which should only be set if more than one CredentialsProvider is registered

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OIDC_CLIENT_CREDENTIALS_CLIENT_SECRET_PROVIDER_NAME+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OIDC_CLIENT_CREDENTIALS_CLIENT_SECRET_PROVIDER_NAME+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.credentials.client-secret.provider.key]]`link:#quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.credentials.client-secret.provider.key[quarkus.oidc-client.credentials.client-secret.provider.key]`


[.description]
--
The CredentialsProvider client secret key

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OIDC_CLIENT_CREDENTIALS_CLIENT_SECRET_PROVIDER_KEY+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OIDC_CLIENT_CREDENTIALS_CLIENT_SECRET_PROVIDER_KEY+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.credentials.client-secret.method]]`link:#quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.credentials.client-secret.method[quarkus.oidc-client.credentials.client-secret.method]`


[.description]
--
Authentication method.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OIDC_CLIENT_CREDENTIALS_CLIENT_SECRET_METHOD+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OIDC_CLIENT_CREDENTIALS_CLIENT_SECRET_METHOD+++`
endif::add-copy-button-to-env-var[]
-- a|
tooltip:basic[client_secret_basic (default): client id and secret are submitted with the HTTP Authorization Basic scheme], tooltip:post[client_secret_post: client id and secret are submitted as the 'client_id' and 'client_secret' form parameters.], tooltip:post-jwt[client_secret_jwt: client id and generated JWT secret are submitted as the 'client_id' and 'client_secret' form parameters.] 
|


a| [[quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.credentials.jwt.secret]]`link:#quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.credentials.jwt.secret[quarkus.oidc-client.credentials.jwt.secret]`


[.description]
--
If provided, indicates that JWT is signed using a secret key

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OIDC_CLIENT_CREDENTIALS_JWT_SECRET+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OIDC_CLIENT_CREDENTIALS_JWT_SECRET+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.credentials.jwt.secret-provider.name]]`link:#quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.credentials.jwt.secret-provider.name[quarkus.oidc-client.credentials.jwt.secret-provider.name]`


[.description]
--
The CredentialsProvider name which should only be set if more than one CredentialsProvider is registered

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OIDC_CLIENT_CREDENTIALS_JWT_SECRET_PROVIDER_NAME+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OIDC_CLIENT_CREDENTIALS_JWT_SECRET_PROVIDER_NAME+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.credentials.jwt.secret-provider.key]]`link:#quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.credentials.jwt.secret-provider.key[quarkus.oidc-client.credentials.jwt.secret-provider.key]`


[.description]
--
The CredentialsProvider client secret key

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OIDC_CLIENT_CREDENTIALS_JWT_SECRET_PROVIDER_KEY+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OIDC_CLIENT_CREDENTIALS_JWT_SECRET_PROVIDER_KEY+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.credentials.jwt.key-file]]`link:#quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.credentials.jwt.key-file[quarkus.oidc-client.credentials.jwt.key-file]`


[.description]
--
If provided, indicates that JWT is signed using a private key in PEM or JWK format. You can use the `signature-algorithm` property to specify the key algorithm.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OIDC_CLIENT_CREDENTIALS_JWT_KEY_FILE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OIDC_CLIENT_CREDENTIALS_JWT_KEY_FILE+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.credentials.jwt.key-store-file]]`link:#quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.credentials.jwt.key-store-file[quarkus.oidc-client.credentials.jwt.key-store-file]`


[.description]
--
If provided, indicates that JWT is signed using a private key from a key store

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OIDC_CLIENT_CREDENTIALS_JWT_KEY_STORE_FILE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OIDC_CLIENT_CREDENTIALS_JWT_KEY_STORE_FILE+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.credentials.jwt.key-store-password]]`link:#quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.credentials.jwt.key-store-password[quarkus.oidc-client.credentials.jwt.key-store-password]`


[.description]
--
A parameter to specify the password of the key store file.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OIDC_CLIENT_CREDENTIALS_JWT_KEY_STORE_PASSWORD+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OIDC_CLIENT_CREDENTIALS_JWT_KEY_STORE_PASSWORD+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.credentials.jwt.key-id]]`link:#quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.credentials.jwt.key-id[quarkus.oidc-client.credentials.jwt.key-id]`


[.description]
--
The private key id/alias

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OIDC_CLIENT_CREDENTIALS_JWT_KEY_ID+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OIDC_CLIENT_CREDENTIALS_JWT_KEY_ID+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.credentials.jwt.key-password]]`link:#quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.credentials.jwt.key-password[quarkus.oidc-client.credentials.jwt.key-password]`


[.description]
--
The private key password

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OIDC_CLIENT_CREDENTIALS_JWT_KEY_PASSWORD+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OIDC_CLIENT_CREDENTIALS_JWT_KEY_PASSWORD+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.credentials.jwt.audience]]`link:#quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.credentials.jwt.audience[quarkus.oidc-client.credentials.jwt.audience]`


[.description]
--
JWT audience ('aud') claim value. By default, the audience is set to the address of the OpenId Connect Provider's token endpoint.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OIDC_CLIENT_CREDENTIALS_JWT_AUDIENCE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OIDC_CLIENT_CREDENTIALS_JWT_AUDIENCE+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.credentials.jwt.token-key-id]]`link:#quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.credentials.jwt.token-key-id[quarkus.oidc-client.credentials.jwt.token-key-id]`


[.description]
--
Key identifier of the signing key added as a JWT 'kid' header

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OIDC_CLIENT_CREDENTIALS_JWT_TOKEN_KEY_ID+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OIDC_CLIENT_CREDENTIALS_JWT_TOKEN_KEY_ID+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.credentials.jwt.issuer]]`link:#quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.credentials.jwt.issuer[quarkus.oidc-client.credentials.jwt.issuer]`


[.description]
--
Issuer of the signing key added as a JWT 'iss' claim (default: client id)

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OIDC_CLIENT_CREDENTIALS_JWT_ISSUER+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OIDC_CLIENT_CREDENTIALS_JWT_ISSUER+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.credentials.jwt.subject]]`link:#quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.credentials.jwt.subject[quarkus.oidc-client.credentials.jwt.subject]`


[.description]
--
Subject of the signing key added as a JWT 'sub' claim (default: client id)

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OIDC_CLIENT_CREDENTIALS_JWT_SUBJECT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OIDC_CLIENT_CREDENTIALS_JWT_SUBJECT+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.credentials.jwt.signature-algorithm]]`link:#quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.credentials.jwt.signature-algorithm[quarkus.oidc-client.credentials.jwt.signature-algorithm]`


[.description]
--
Signature algorithm, also used for the `key-file` property. Supported values: RS256, RS384, RS512, PS256, PS384, PS512, ES256, ES384, ES512, HS256, HS384, HS512.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OIDC_CLIENT_CREDENTIALS_JWT_SIGNATURE_ALGORITHM+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OIDC_CLIENT_CREDENTIALS_JWT_SIGNATURE_ALGORITHM+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.credentials.jwt.lifespan]]`link:#quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.credentials.jwt.lifespan[quarkus.oidc-client.credentials.jwt.lifespan]`


[.description]
--
JWT life-span in seconds. It will be added to the time it was issued at to calculate the expiration time.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OIDC_CLIENT_CREDENTIALS_JWT_LIFESPAN+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OIDC_CLIENT_CREDENTIALS_JWT_LIFESPAN+++`
endif::add-copy-button-to-env-var[]
--|int 
|`10`


a| [[quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.proxy.host]]`link:#quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.proxy.host[quarkus.oidc-client.proxy.host]`


[.description]
--
The host (name or IP address) of the Proxy. +
Note: If OIDC adapter needs to use a Proxy to talk with OIDC server (Provider), then at least the "host" config item must be configured to enable the usage of a Proxy.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OIDC_CLIENT_PROXY_HOST+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OIDC_CLIENT_PROXY_HOST+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.proxy.port]]`link:#quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.proxy.port[quarkus.oidc-client.proxy.port]`


[.description]
--
The port number of the Proxy. Default value is 80.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OIDC_CLIENT_PROXY_PORT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OIDC_CLIENT_PROXY_PORT+++`
endif::add-copy-button-to-env-var[]
--|int 
|`80`


a| [[quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.proxy.username]]`link:#quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.proxy.username[quarkus.oidc-client.proxy.username]`


[.description]
--
The username, if Proxy needs authentication.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OIDC_CLIENT_PROXY_USERNAME+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OIDC_CLIENT_PROXY_USERNAME+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.proxy.password]]`link:#quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.proxy.password[quarkus.oidc-client.proxy.password]`


[.description]
--
The password, if Proxy needs authentication.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OIDC_CLIENT_PROXY_PASSWORD+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OIDC_CLIENT_PROXY_PASSWORD+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.tls.verification]]`link:#quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.tls.verification[quarkus.oidc-client.tls.verification]`


[.description]
--
Certificate validation and hostname verification, which can be one of the following values from enum `Verification`. Default is required.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OIDC_CLIENT_TLS_VERIFICATION+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OIDC_CLIENT_TLS_VERIFICATION+++`
endif::add-copy-button-to-env-var[]
-- a|
tooltip:required[Certificates are validated and hostname verification is enabled. This is the default value.], tooltip:certificate-validation[Certificates are validated but hostname verification is disabled.], tooltip:none[All certificated are trusted and hostname verification is disabled.] 
|


a| [[quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.tls.key-store-file]]`link:#quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.tls.key-store-file[quarkus.oidc-client.tls.key-store-file]`


[.description]
--
An optional key store which holds the certificate information instead of specifying separate files.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OIDC_CLIENT_TLS_KEY_STORE_FILE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OIDC_CLIENT_TLS_KEY_STORE_FILE+++`
endif::add-copy-button-to-env-var[]
--|path 
|


a| [[quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.tls.key-store-file-type]]`link:#quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.tls.key-store-file-type[quarkus.oidc-client.tls.key-store-file-type]`


[.description]
--
An optional parameter to specify type of the key store file. If not given, the type is automatically detected based on the file name.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OIDC_CLIENT_TLS_KEY_STORE_FILE_TYPE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OIDC_CLIENT_TLS_KEY_STORE_FILE_TYPE+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.tls.key-store-provider]]`link:#quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.tls.key-store-provider[quarkus.oidc-client.tls.key-store-provider]`


[.description]
--
An optional parameter to specify a provider of the key store file. If not given, the provider is automatically detected based on the key store file type.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OIDC_CLIENT_TLS_KEY_STORE_PROVIDER+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OIDC_CLIENT_TLS_KEY_STORE_PROVIDER+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.tls.key-store-password]]`link:#quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.tls.key-store-password[quarkus.oidc-client.tls.key-store-password]`


[.description]
--
A parameter to specify the password of the key store file. If not given, the default ("password") is used.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OIDC_CLIENT_TLS_KEY_STORE_PASSWORD+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OIDC_CLIENT_TLS_KEY_STORE_PASSWORD+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.tls.key-store-key-alias]]`link:#quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.tls.key-store-key-alias[quarkus.oidc-client.tls.key-store-key-alias]`


[.description]
--
An optional parameter to select a specific key in the key store. When SNI is disabled, if the key store contains multiple keys and no alias is specified, the behavior is undefined.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OIDC_CLIENT_TLS_KEY_STORE_KEY_ALIAS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OIDC_CLIENT_TLS_KEY_STORE_KEY_ALIAS+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.tls.key-store-key-password]]`link:#quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.tls.key-store-key-password[quarkus.oidc-client.tls.key-store-key-password]`


[.description]
--
An optional parameter to define the password for the key, in case it's different from `key-store-password`.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OIDC_CLIENT_TLS_KEY_STORE_KEY_PASSWORD+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OIDC_CLIENT_TLS_KEY_STORE_KEY_PASSWORD+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.tls.trust-store-file]]`link:#quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.tls.trust-store-file[quarkus.oidc-client.tls.trust-store-file]`


[.description]
--
An optional trust store which holds the certificate information of the certificates to trust

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OIDC_CLIENT_TLS_TRUST_STORE_FILE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OIDC_CLIENT_TLS_TRUST_STORE_FILE+++`
endif::add-copy-button-to-env-var[]
--|path 
|


a| [[quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.tls.trust-store-password]]`link:#quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.tls.trust-store-password[quarkus.oidc-client.tls.trust-store-password]`


[.description]
--
A parameter to specify the password of the trust store file.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OIDC_CLIENT_TLS_TRUST_STORE_PASSWORD+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OIDC_CLIENT_TLS_TRUST_STORE_PASSWORD+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.tls.trust-store-cert-alias]]`link:#quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.tls.trust-store-cert-alias[quarkus.oidc-client.tls.trust-store-cert-alias]`


[.description]
--
A parameter to specify the alias of the trust store certificate.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OIDC_CLIENT_TLS_TRUST_STORE_CERT_ALIAS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OIDC_CLIENT_TLS_TRUST_STORE_CERT_ALIAS+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.tls.trust-store-file-type]]`link:#quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.tls.trust-store-file-type[quarkus.oidc-client.tls.trust-store-file-type]`


[.description]
--
An optional parameter to specify type of the trust store file. If not given, the type is automatically detected based on the file name.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OIDC_CLIENT_TLS_TRUST_STORE_FILE_TYPE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OIDC_CLIENT_TLS_TRUST_STORE_FILE_TYPE+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.tls.trust-store-provider]]`link:#quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.tls.trust-store-provider[quarkus.oidc-client.tls.trust-store-provider]`


[.description]
--
An optional parameter to specify a provider of the trust store file. If not given, the provider is automatically detected based on the trust store file type.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OIDC_CLIENT_TLS_TRUST_STORE_PROVIDER+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OIDC_CLIENT_TLS_TRUST_STORE_PROVIDER+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.id]]`link:#quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.id[quarkus.oidc-client.id]`


[.description]
--
A unique OIDC client identifier. It must be set when OIDC clients are created dynamically and is optional in all other cases.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OIDC_CLIENT_ID+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OIDC_CLIENT_ID+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.client-enabled]]`link:#quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.client-enabled[quarkus.oidc-client.client-enabled]`


[.description]
--
If this client configuration is enabled.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OIDC_CLIENT_CLIENT_ENABLED+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OIDC_CLIENT_CLIENT_ENABLED+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`true`


a| [[quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.scopes]]`link:#quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.scopes[quarkus.oidc-client.scopes]`


[.description]
--
List of access token scopes

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OIDC_CLIENT_SCOPES+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OIDC_CLIENT_SCOPES+++`
endif::add-copy-button-to-env-var[]
--|list of string 
|


a| [[quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.refresh-token-time-skew]]`link:#quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.refresh-token-time-skew[quarkus.oidc-client.refresh-token-time-skew]`


[.description]
--
Refresh token time skew in seconds. If this property is enabled then the configured number of seconds is added to the current time when checking whether the access token should be refreshed. If the sum is greater than this access token's expiration time then a refresh is going to happen.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OIDC_CLIENT_REFRESH_TOKEN_TIME_SKEW+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OIDC_CLIENT_REFRESH_TOKEN_TIME_SKEW+++`
endif::add-copy-button-to-env-var[]
--|link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html[Duration]
  link:#duration-note-anchor-{summaryTableId}[icon:question-circle[], title=More information about the Duration format]
|


a| [[quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.absolute-expires-in]]`link:#quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.absolute-expires-in[quarkus.oidc-client.absolute-expires-in]`


[.description]
--
If the access token 'expires_in' property should be checked as an absolute time value as opposed to a duration relative to the current time.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OIDC_CLIENT_ABSOLUTE_EXPIRES_IN+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OIDC_CLIENT_ABSOLUTE_EXPIRES_IN+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`false`


a| [[quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.grant.type]]`link:#quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.grant.type[quarkus.oidc-client.grant.type]`


[.description]
--
Grant type

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OIDC_CLIENT_GRANT_TYPE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OIDC_CLIENT_GRANT_TYPE+++`
endif::add-copy-button-to-env-var[]
-- a|
tooltip:client['client_credentials' grant requiring an OIDC client authentication only], tooltip:password['password' grant requiring both OIDC client and user ('username' and 'password') authentications], tooltip:code['authorization_code' grant requiring an OIDC client authentication as well as at least 'code' and 'redirect_uri' parameters which must be passed to OidcClient at the token request time.], tooltip:exchange['urn:ietf:params:oauth:grant-type:token-exchange' grant requiring an OIDC client authentication as well as at least 'subject_token' parameter which must be passed to OidcClient at the token request time.], tooltip:jwt['urn:ietf:params:oauth:grant-type:jwt-bearer' grant requiring an OIDC client authentication as well as at least an 'assertion' parameter which must be passed to OidcClient at the token request time.], tooltip:refresh['refresh_token' grant requiring an OIDC client authentication and a refresh token. Note, OidcClient supports this grant by default if an access token acquisition response contained a refresh token. However, in some cases, the refresh token is provided out of band, for example, it can be shared between several of the confidential client's services, etc. If 'quarkus.oidc-client.grant-type' is set to 'refresh' then `OidcClient` will only support refreshing the tokens.] 
|`client`


a| [[quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.grant.access-token-property]]`link:#quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.grant.access-token-property[quarkus.oidc-client.grant.access-token-property]`


[.description]
--
Access token property name in a token grant response

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OIDC_CLIENT_GRANT_ACCESS_TOKEN_PROPERTY+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OIDC_CLIENT_GRANT_ACCESS_TOKEN_PROPERTY+++`
endif::add-copy-button-to-env-var[]
--|string 
|`access_token`


a| [[quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.grant.refresh-token-property]]`link:#quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.grant.refresh-token-property[quarkus.oidc-client.grant.refresh-token-property]`


[.description]
--
Refresh token property name in a token grant response

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OIDC_CLIENT_GRANT_REFRESH_TOKEN_PROPERTY+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OIDC_CLIENT_GRANT_REFRESH_TOKEN_PROPERTY+++`
endif::add-copy-button-to-env-var[]
--|string 
|`refresh_token`


a| [[quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.grant.expires-in-property]]`link:#quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.grant.expires-in-property[quarkus.oidc-client.grant.expires-in-property]`


[.description]
--
Access token expiry property name in a token grant response

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OIDC_CLIENT_GRANT_EXPIRES_IN_PROPERTY+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OIDC_CLIENT_GRANT_EXPIRES_IN_PROPERTY+++`
endif::add-copy-button-to-env-var[]
--|string 
|`expires_in`


a| [[quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.grant.refresh-expires-in-property]]`link:#quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.grant.refresh-expires-in-property[quarkus.oidc-client.grant.refresh-expires-in-property]`


[.description]
--
Refresh token expiry property name in a token grant response

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OIDC_CLIENT_GRANT_REFRESH_EXPIRES_IN_PROPERTY+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OIDC_CLIENT_GRANT_REFRESH_EXPIRES_IN_PROPERTY+++`
endif::add-copy-button-to-env-var[]
--|string 
|`refresh_expires_in`


a| [[quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.early-tokens-acquisition]]`link:#quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.early-tokens-acquisition[quarkus.oidc-client.early-tokens-acquisition]`


[.description]
--
Requires that all filters which use 'OidcClient' acquire the tokens at the post-construct initialization time, possibly long before these tokens are used. This property should be disabled if the access token may expire before it is used for the first time and no refresh token is available.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OIDC_CLIENT_EARLY_TOKENS_ACQUISITION+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OIDC_CLIENT_EARLY_TOKENS_ACQUISITION+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`true`


a| [[quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.grant-options-grant-options]]`link:#quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.grant-options-grant-options[quarkus.oidc-client.grant-options]`


[.description]
--
Grant options

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OIDC_CLIENT_GRANT_OPTIONS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OIDC_CLIENT_GRANT_OPTIONS+++`
endif::add-copy-button-to-env-var[]
--|`Map<String,Map<String,String>>` 
|


a| [[quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.headers-headers]]`link:#quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.headers-headers[quarkus.oidc-client.headers]`


[.description]
--
Custom HTTP headers which have to be sent to the token endpoint

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OIDC_CLIENT_HEADERS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OIDC_CLIENT_HEADERS+++`
endif::add-copy-button-to-env-var[]
--|`Map<String,String>` 
|


h|[[quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.named-clients-additional-named-clients]]link:#quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.named-clients-additional-named-clients[Additional named clients]

h|Type
h|Default

a| [[quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.-id-.auth-server-url]]`link:#quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.-id-.auth-server-url[quarkus.oidc-client."id".auth-server-url]`


[.description]
--
The base URL of the OpenID Connect (OIDC) server, for example, `https://host:port/auth`. OIDC discovery endpoint will be called by default by appending a '.well-known/openid-configuration' path to this URL. Note if you work with Keycloak OIDC server, make sure the base URL is in the following format: `https://host:port/realms/++{++realm++}++` where `++{++realm++}++` has to be replaced by the name of the Keycloak realm.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OIDC_CLIENT__ID__AUTH_SERVER_URL+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OIDC_CLIENT__ID__AUTH_SERVER_URL+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.-id-.discovery-enabled]]`link:#quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.-id-.discovery-enabled[quarkus.oidc-client."id".discovery-enabled]`


[.description]
--
Enables OIDC discovery. If the discovery is disabled then the OIDC endpoint URLs must be configured individually.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OIDC_CLIENT__ID__DISCOVERY_ENABLED+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OIDC_CLIENT__ID__DISCOVERY_ENABLED+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`true`


a| [[quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.-id-.token-path]]`link:#quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.-id-.token-path[quarkus.oidc-client."id".token-path]`


[.description]
--
Relative path or absolute URL of the OIDC token endpoint which issues access and refresh tokens.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OIDC_CLIENT__ID__TOKEN_PATH+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OIDC_CLIENT__ID__TOKEN_PATH+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.-id-.revoke-path]]`link:#quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.-id-.revoke-path[quarkus.oidc-client."id".revoke-path]`


[.description]
--
Relative path or absolute URL of the OIDC token revocation endpoint.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OIDC_CLIENT__ID__REVOKE_PATH+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OIDC_CLIENT__ID__REVOKE_PATH+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.-id-.client-id]]`link:#quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.-id-.client-id[quarkus.oidc-client."id".client-id]`


[.description]
--
The client-id of the application. Each application has a client-id that is used to identify the application

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OIDC_CLIENT__ID__CLIENT_ID+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OIDC_CLIENT__ID__CLIENT_ID+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.-id-.connection-delay]]`link:#quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.-id-.connection-delay[quarkus.oidc-client."id".connection-delay]`


[.description]
--
The maximum amount of time connecting to the currently unavailable OIDC server will be attempted for. The number of times the connection request will be repeated is calculated by dividing the value of this property by 2. For example, setting it to `20S` will allow for requesting the connection up to 10 times with a 2 seconds delay between the retries. Note this property is only effective when the initial OIDC connection is created, for example, when requesting a well-known OIDC configuration. Use the 'connection-retry-count' property to support trying to re-establish an already available connection which may have been dropped.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OIDC_CLIENT__ID__CONNECTION_DELAY+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OIDC_CLIENT__ID__CONNECTION_DELAY+++`
endif::add-copy-button-to-env-var[]
--|link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html[Duration]
  link:#duration-note-anchor-{summaryTableId}[icon:question-circle[], title=More information about the Duration format]
|


a| [[quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.-id-.connection-retry-count]]`link:#quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.-id-.connection-retry-count[quarkus.oidc-client."id".connection-retry-count]`


[.description]
--
The number of times an attempt to re-establish an already available connection will be repeated for. Note this property is different to the `connection-delay` property which is only effective during the initial OIDC connection creation. This property is used to try to recover the existing connection which may have been temporarily lost. For example, if a request to the OIDC token endpoint fails due to a connection exception then the request will be retried for a number of times configured by this property.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OIDC_CLIENT__ID__CONNECTION_RETRY_COUNT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OIDC_CLIENT__ID__CONNECTION_RETRY_COUNT+++`
endif::add-copy-button-to-env-var[]
--|int 
|`3`


a| [[quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.-id-.connection-timeout]]`link:#quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.-id-.connection-timeout[quarkus.oidc-client."id".connection-timeout]`


[.description]
--
The amount of time after which the current OIDC connection request will time out.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OIDC_CLIENT__ID__CONNECTION_TIMEOUT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OIDC_CLIENT__ID__CONNECTION_TIMEOUT+++`
endif::add-copy-button-to-env-var[]
--|link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html[Duration]
  link:#duration-note-anchor-{summaryTableId}[icon:question-circle[], title=More information about the Duration format]
|`10S`


a| [[quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.-id-.max-pool-size]]`link:#quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.-id-.max-pool-size[quarkus.oidc-client."id".max-pool-size]`


[.description]
--
The maximum size of the connection pool used by the WebClient

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OIDC_CLIENT__ID__MAX_POOL_SIZE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OIDC_CLIENT__ID__MAX_POOL_SIZE+++`
endif::add-copy-button-to-env-var[]
--|int 
|


a| [[quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.-id-.credentials.secret]]`link:#quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.-id-.credentials.secret[quarkus.oidc-client."id".credentials.secret]`


[.description]
--
Client secret which is used for a `client_secret_basic` authentication method. Note that a 'client-secret.value' can be used instead but both properties are mutually exclusive.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OIDC_CLIENT__ID__CREDENTIALS_SECRET+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OIDC_CLIENT__ID__CREDENTIALS_SECRET+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.-id-.credentials.client-secret.value]]`link:#quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.-id-.credentials.client-secret.value[quarkus.oidc-client."id".credentials.client-secret.value]`


[.description]
--
The client secret value - it will be ignored if 'secret.key' is set

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OIDC_CLIENT__ID__CREDENTIALS_CLIENT_SECRET_VALUE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OIDC_CLIENT__ID__CREDENTIALS_CLIENT_SECRET_VALUE+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.-id-.credentials.client-secret.provider.name]]`link:#quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.-id-.credentials.client-secret.provider.name[quarkus.oidc-client."id".credentials.client-secret.provider.name]`


[.description]
--
The CredentialsProvider name which should only be set if more than one CredentialsProvider is registered

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OIDC_CLIENT__ID__CREDENTIALS_CLIENT_SECRET_PROVIDER_NAME+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OIDC_CLIENT__ID__CREDENTIALS_CLIENT_SECRET_PROVIDER_NAME+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.-id-.credentials.client-secret.provider.key]]`link:#quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.-id-.credentials.client-secret.provider.key[quarkus.oidc-client."id".credentials.client-secret.provider.key]`


[.description]
--
The CredentialsProvider client secret key

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OIDC_CLIENT__ID__CREDENTIALS_CLIENT_SECRET_PROVIDER_KEY+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OIDC_CLIENT__ID__CREDENTIALS_CLIENT_SECRET_PROVIDER_KEY+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.-id-.credentials.client-secret.method]]`link:#quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.-id-.credentials.client-secret.method[quarkus.oidc-client."id".credentials.client-secret.method]`


[.description]
--
Authentication method.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OIDC_CLIENT__ID__CREDENTIALS_CLIENT_SECRET_METHOD+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OIDC_CLIENT__ID__CREDENTIALS_CLIENT_SECRET_METHOD+++`
endif::add-copy-button-to-env-var[]
-- a|
tooltip:basic[client_secret_basic (default): client id and secret are submitted with the HTTP Authorization Basic scheme], tooltip:post[client_secret_post: client id and secret are submitted as the 'client_id' and 'client_secret' form parameters.], tooltip:post-jwt[client_secret_jwt: client id and generated JWT secret are submitted as the 'client_id' and 'client_secret' form parameters.] 
|


a| [[quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.-id-.credentials.jwt.secret]]`link:#quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.-id-.credentials.jwt.secret[quarkus.oidc-client."id".credentials.jwt.secret]`


[.description]
--
If provided, indicates that JWT is signed using a secret key

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OIDC_CLIENT__ID__CREDENTIALS_JWT_SECRET+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OIDC_CLIENT__ID__CREDENTIALS_JWT_SECRET+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.-id-.credentials.jwt.secret-provider.name]]`link:#quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.-id-.credentials.jwt.secret-provider.name[quarkus.oidc-client."id".credentials.jwt.secret-provider.name]`


[.description]
--
The CredentialsProvider name which should only be set if more than one CredentialsProvider is registered

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OIDC_CLIENT__ID__CREDENTIALS_JWT_SECRET_PROVIDER_NAME+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OIDC_CLIENT__ID__CREDENTIALS_JWT_SECRET_PROVIDER_NAME+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.-id-.credentials.jwt.secret-provider.key]]`link:#quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.-id-.credentials.jwt.secret-provider.key[quarkus.oidc-client."id".credentials.jwt.secret-provider.key]`


[.description]
--
The CredentialsProvider client secret key

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OIDC_CLIENT__ID__CREDENTIALS_JWT_SECRET_PROVIDER_KEY+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OIDC_CLIENT__ID__CREDENTIALS_JWT_SECRET_PROVIDER_KEY+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.-id-.credentials.jwt.key-file]]`link:#quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.-id-.credentials.jwt.key-file[quarkus.oidc-client."id".credentials.jwt.key-file]`


[.description]
--
If provided, indicates that JWT is signed using a private key in PEM or JWK format. You can use the `signature-algorithm` property to specify the key algorithm.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OIDC_CLIENT__ID__CREDENTIALS_JWT_KEY_FILE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OIDC_CLIENT__ID__CREDENTIALS_JWT_KEY_FILE+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.-id-.credentials.jwt.key-store-file]]`link:#quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.-id-.credentials.jwt.key-store-file[quarkus.oidc-client."id".credentials.jwt.key-store-file]`


[.description]
--
If provided, indicates that JWT is signed using a private key from a key store

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OIDC_CLIENT__ID__CREDENTIALS_JWT_KEY_STORE_FILE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OIDC_CLIENT__ID__CREDENTIALS_JWT_KEY_STORE_FILE+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.-id-.credentials.jwt.key-store-password]]`link:#quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.-id-.credentials.jwt.key-store-password[quarkus.oidc-client."id".credentials.jwt.key-store-password]`


[.description]
--
A parameter to specify the password of the key store file.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OIDC_CLIENT__ID__CREDENTIALS_JWT_KEY_STORE_PASSWORD+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OIDC_CLIENT__ID__CREDENTIALS_JWT_KEY_STORE_PASSWORD+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.-id-.credentials.jwt.key-id]]`link:#quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.-id-.credentials.jwt.key-id[quarkus.oidc-client."id".credentials.jwt.key-id]`


[.description]
--
The private key id/alias

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OIDC_CLIENT__ID__CREDENTIALS_JWT_KEY_ID+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OIDC_CLIENT__ID__CREDENTIALS_JWT_KEY_ID+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.-id-.credentials.jwt.key-password]]`link:#quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.-id-.credentials.jwt.key-password[quarkus.oidc-client."id".credentials.jwt.key-password]`


[.description]
--
The private key password

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OIDC_CLIENT__ID__CREDENTIALS_JWT_KEY_PASSWORD+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OIDC_CLIENT__ID__CREDENTIALS_JWT_KEY_PASSWORD+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.-id-.credentials.jwt.audience]]`link:#quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.-id-.credentials.jwt.audience[quarkus.oidc-client."id".credentials.jwt.audience]`


[.description]
--
JWT audience ('aud') claim value. By default, the audience is set to the address of the OpenId Connect Provider's token endpoint.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OIDC_CLIENT__ID__CREDENTIALS_JWT_AUDIENCE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OIDC_CLIENT__ID__CREDENTIALS_JWT_AUDIENCE+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.-id-.credentials.jwt.token-key-id]]`link:#quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.-id-.credentials.jwt.token-key-id[quarkus.oidc-client."id".credentials.jwt.token-key-id]`


[.description]
--
Key identifier of the signing key added as a JWT 'kid' header

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OIDC_CLIENT__ID__CREDENTIALS_JWT_TOKEN_KEY_ID+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OIDC_CLIENT__ID__CREDENTIALS_JWT_TOKEN_KEY_ID+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.-id-.credentials.jwt.issuer]]`link:#quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.-id-.credentials.jwt.issuer[quarkus.oidc-client."id".credentials.jwt.issuer]`


[.description]
--
Issuer of the signing key added as a JWT 'iss' claim (default: client id)

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OIDC_CLIENT__ID__CREDENTIALS_JWT_ISSUER+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OIDC_CLIENT__ID__CREDENTIALS_JWT_ISSUER+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.-id-.credentials.jwt.subject]]`link:#quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.-id-.credentials.jwt.subject[quarkus.oidc-client."id".credentials.jwt.subject]`


[.description]
--
Subject of the signing key added as a JWT 'sub' claim (default: client id)

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OIDC_CLIENT__ID__CREDENTIALS_JWT_SUBJECT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OIDC_CLIENT__ID__CREDENTIALS_JWT_SUBJECT+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.-id-.credentials.jwt.signature-algorithm]]`link:#quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.-id-.credentials.jwt.signature-algorithm[quarkus.oidc-client."id".credentials.jwt.signature-algorithm]`


[.description]
--
Signature algorithm, also used for the `key-file` property. Supported values: RS256, RS384, RS512, PS256, PS384, PS512, ES256, ES384, ES512, HS256, HS384, HS512.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OIDC_CLIENT__ID__CREDENTIALS_JWT_SIGNATURE_ALGORITHM+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OIDC_CLIENT__ID__CREDENTIALS_JWT_SIGNATURE_ALGORITHM+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.-id-.credentials.jwt.lifespan]]`link:#quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.-id-.credentials.jwt.lifespan[quarkus.oidc-client."id".credentials.jwt.lifespan]`


[.description]
--
JWT life-span in seconds. It will be added to the time it was issued at to calculate the expiration time.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OIDC_CLIENT__ID__CREDENTIALS_JWT_LIFESPAN+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OIDC_CLIENT__ID__CREDENTIALS_JWT_LIFESPAN+++`
endif::add-copy-button-to-env-var[]
--|int 
|`10`


a| [[quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.-id-.proxy.host]]`link:#quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.-id-.proxy.host[quarkus.oidc-client."id".proxy.host]`


[.description]
--
The host (name or IP address) of the Proxy. +
Note: If OIDC adapter needs to use a Proxy to talk with OIDC server (Provider), then at least the "host" config item must be configured to enable the usage of a Proxy.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OIDC_CLIENT__ID__PROXY_HOST+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OIDC_CLIENT__ID__PROXY_HOST+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.-id-.proxy.port]]`link:#quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.-id-.proxy.port[quarkus.oidc-client."id".proxy.port]`


[.description]
--
The port number of the Proxy. Default value is 80.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OIDC_CLIENT__ID__PROXY_PORT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OIDC_CLIENT__ID__PROXY_PORT+++`
endif::add-copy-button-to-env-var[]
--|int 
|`80`


a| [[quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.-id-.proxy.username]]`link:#quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.-id-.proxy.username[quarkus.oidc-client."id".proxy.username]`


[.description]
--
The username, if Proxy needs authentication.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OIDC_CLIENT__ID__PROXY_USERNAME+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OIDC_CLIENT__ID__PROXY_USERNAME+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.-id-.proxy.password]]`link:#quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.-id-.proxy.password[quarkus.oidc-client."id".proxy.password]`


[.description]
--
The password, if Proxy needs authentication.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OIDC_CLIENT__ID__PROXY_PASSWORD+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OIDC_CLIENT__ID__PROXY_PASSWORD+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.-id-.tls.verification]]`link:#quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.-id-.tls.verification[quarkus.oidc-client."id".tls.verification]`


[.description]
--
Certificate validation and hostname verification, which can be one of the following values from enum `Verification`. Default is required.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OIDC_CLIENT__ID__TLS_VERIFICATION+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OIDC_CLIENT__ID__TLS_VERIFICATION+++`
endif::add-copy-button-to-env-var[]
-- a|
tooltip:required[Certificates are validated and hostname verification is enabled. This is the default value.], tooltip:certificate-validation[Certificates are validated but hostname verification is disabled.], tooltip:none[All certificated are trusted and hostname verification is disabled.] 
|


a| [[quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.-id-.tls.key-store-file]]`link:#quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.-id-.tls.key-store-file[quarkus.oidc-client."id".tls.key-store-file]`


[.description]
--
An optional key store which holds the certificate information instead of specifying separate files.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OIDC_CLIENT__ID__TLS_KEY_STORE_FILE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OIDC_CLIENT__ID__TLS_KEY_STORE_FILE+++`
endif::add-copy-button-to-env-var[]
--|path 
|


a| [[quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.-id-.tls.key-store-file-type]]`link:#quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.-id-.tls.key-store-file-type[quarkus.oidc-client."id".tls.key-store-file-type]`


[.description]
--
An optional parameter to specify type of the key store file. If not given, the type is automatically detected based on the file name.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OIDC_CLIENT__ID__TLS_KEY_STORE_FILE_TYPE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OIDC_CLIENT__ID__TLS_KEY_STORE_FILE_TYPE+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.-id-.tls.key-store-provider]]`link:#quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.-id-.tls.key-store-provider[quarkus.oidc-client."id".tls.key-store-provider]`


[.description]
--
An optional parameter to specify a provider of the key store file. If not given, the provider is automatically detected based on the key store file type.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OIDC_CLIENT__ID__TLS_KEY_STORE_PROVIDER+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OIDC_CLIENT__ID__TLS_KEY_STORE_PROVIDER+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.-id-.tls.key-store-password]]`link:#quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.-id-.tls.key-store-password[quarkus.oidc-client."id".tls.key-store-password]`


[.description]
--
A parameter to specify the password of the key store file. If not given, the default ("password") is used.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OIDC_CLIENT__ID__TLS_KEY_STORE_PASSWORD+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OIDC_CLIENT__ID__TLS_KEY_STORE_PASSWORD+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.-id-.tls.key-store-key-alias]]`link:#quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.-id-.tls.key-store-key-alias[quarkus.oidc-client."id".tls.key-store-key-alias]`


[.description]
--
An optional parameter to select a specific key in the key store. When SNI is disabled, if the key store contains multiple keys and no alias is specified, the behavior is undefined.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OIDC_CLIENT__ID__TLS_KEY_STORE_KEY_ALIAS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OIDC_CLIENT__ID__TLS_KEY_STORE_KEY_ALIAS+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.-id-.tls.key-store-key-password]]`link:#quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.-id-.tls.key-store-key-password[quarkus.oidc-client."id".tls.key-store-key-password]`


[.description]
--
An optional parameter to define the password for the key, in case it's different from `key-store-password`.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OIDC_CLIENT__ID__TLS_KEY_STORE_KEY_PASSWORD+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OIDC_CLIENT__ID__TLS_KEY_STORE_KEY_PASSWORD+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.-id-.tls.trust-store-file]]`link:#quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.-id-.tls.trust-store-file[quarkus.oidc-client."id".tls.trust-store-file]`


[.description]
--
An optional trust store which holds the certificate information of the certificates to trust

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OIDC_CLIENT__ID__TLS_TRUST_STORE_FILE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OIDC_CLIENT__ID__TLS_TRUST_STORE_FILE+++`
endif::add-copy-button-to-env-var[]
--|path 
|


a| [[quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.-id-.tls.trust-store-password]]`link:#quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.-id-.tls.trust-store-password[quarkus.oidc-client."id".tls.trust-store-password]`


[.description]
--
A parameter to specify the password of the trust store file.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OIDC_CLIENT__ID__TLS_TRUST_STORE_PASSWORD+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OIDC_CLIENT__ID__TLS_TRUST_STORE_PASSWORD+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.-id-.tls.trust-store-cert-alias]]`link:#quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.-id-.tls.trust-store-cert-alias[quarkus.oidc-client."id".tls.trust-store-cert-alias]`


[.description]
--
A parameter to specify the alias of the trust store certificate.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OIDC_CLIENT__ID__TLS_TRUST_STORE_CERT_ALIAS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OIDC_CLIENT__ID__TLS_TRUST_STORE_CERT_ALIAS+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.-id-.tls.trust-store-file-type]]`link:#quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.-id-.tls.trust-store-file-type[quarkus.oidc-client."id".tls.trust-store-file-type]`


[.description]
--
An optional parameter to specify type of the trust store file. If not given, the type is automatically detected based on the file name.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OIDC_CLIENT__ID__TLS_TRUST_STORE_FILE_TYPE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OIDC_CLIENT__ID__TLS_TRUST_STORE_FILE_TYPE+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.-id-.tls.trust-store-provider]]`link:#quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.-id-.tls.trust-store-provider[quarkus.oidc-client."id".tls.trust-store-provider]`


[.description]
--
An optional parameter to specify a provider of the trust store file. If not given, the provider is automatically detected based on the trust store file type.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OIDC_CLIENT__ID__TLS_TRUST_STORE_PROVIDER+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OIDC_CLIENT__ID__TLS_TRUST_STORE_PROVIDER+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.-id-.id]]`link:#quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.-id-.id[quarkus.oidc-client."id".id]`


[.description]
--
A unique OIDC client identifier. It must be set when OIDC clients are created dynamically and is optional in all other cases.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OIDC_CLIENT__ID__ID+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OIDC_CLIENT__ID__ID+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.-id-.client-enabled]]`link:#quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.-id-.client-enabled[quarkus.oidc-client."id".client-enabled]`


[.description]
--
If this client configuration is enabled.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OIDC_CLIENT__ID__CLIENT_ENABLED+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OIDC_CLIENT__ID__CLIENT_ENABLED+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`true`


a| [[quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.-id-.scopes]]`link:#quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.-id-.scopes[quarkus.oidc-client."id".scopes]`


[.description]
--
List of access token scopes

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OIDC_CLIENT__ID__SCOPES+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OIDC_CLIENT__ID__SCOPES+++`
endif::add-copy-button-to-env-var[]
--|list of string 
|


a| [[quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.-id-.refresh-token-time-skew]]`link:#quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.-id-.refresh-token-time-skew[quarkus.oidc-client."id".refresh-token-time-skew]`


[.description]
--
Refresh token time skew in seconds. If this property is enabled then the configured number of seconds is added to the current time when checking whether the access token should be refreshed. If the sum is greater than this access token's expiration time then a refresh is going to happen.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OIDC_CLIENT__ID__REFRESH_TOKEN_TIME_SKEW+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OIDC_CLIENT__ID__REFRESH_TOKEN_TIME_SKEW+++`
endif::add-copy-button-to-env-var[]
--|link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html[Duration]
  link:#duration-note-anchor-{summaryTableId}[icon:question-circle[], title=More information about the Duration format]
|


a| [[quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.-id-.absolute-expires-in]]`link:#quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.-id-.absolute-expires-in[quarkus.oidc-client."id".absolute-expires-in]`


[.description]
--
If the access token 'expires_in' property should be checked as an absolute time value as opposed to a duration relative to the current time.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OIDC_CLIENT__ID__ABSOLUTE_EXPIRES_IN+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OIDC_CLIENT__ID__ABSOLUTE_EXPIRES_IN+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`false`


a| [[quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.-id-.grant.type]]`link:#quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.-id-.grant.type[quarkus.oidc-client."id".grant.type]`


[.description]
--
Grant type

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OIDC_CLIENT__ID__GRANT_TYPE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OIDC_CLIENT__ID__GRANT_TYPE+++`
endif::add-copy-button-to-env-var[]
-- a|
tooltip:client['client_credentials' grant requiring an OIDC client authentication only], tooltip:password['password' grant requiring both OIDC client and user ('username' and 'password') authentications], tooltip:code['authorization_code' grant requiring an OIDC client authentication as well as at least 'code' and 'redirect_uri' parameters which must be passed to OidcClient at the token request time.], tooltip:exchange['urn:ietf:params:oauth:grant-type:token-exchange' grant requiring an OIDC client authentication as well as at least 'subject_token' parameter which must be passed to OidcClient at the token request time.], tooltip:jwt['urn:ietf:params:oauth:grant-type:jwt-bearer' grant requiring an OIDC client authentication as well as at least an 'assertion' parameter which must be passed to OidcClient at the token request time.], tooltip:refresh['refresh_token' grant requiring an OIDC client authentication and a refresh token. Note, OidcClient supports this grant by default if an access token acquisition response contained a refresh token. However, in some cases, the refresh token is provided out of band, for example, it can be shared between several of the confidential client's services, etc. If 'quarkus.oidc-client.grant-type' is set to 'refresh' then `OidcClient` will only support refreshing the tokens.] 
|`client`


a| [[quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.-id-.grant.access-token-property]]`link:#quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.-id-.grant.access-token-property[quarkus.oidc-client."id".grant.access-token-property]`


[.description]
--
Access token property name in a token grant response

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OIDC_CLIENT__ID__GRANT_ACCESS_TOKEN_PROPERTY+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OIDC_CLIENT__ID__GRANT_ACCESS_TOKEN_PROPERTY+++`
endif::add-copy-button-to-env-var[]
--|string 
|`access_token`


a| [[quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.-id-.grant.refresh-token-property]]`link:#quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.-id-.grant.refresh-token-property[quarkus.oidc-client."id".grant.refresh-token-property]`


[.description]
--
Refresh token property name in a token grant response

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OIDC_CLIENT__ID__GRANT_REFRESH_TOKEN_PROPERTY+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OIDC_CLIENT__ID__GRANT_REFRESH_TOKEN_PROPERTY+++`
endif::add-copy-button-to-env-var[]
--|string 
|`refresh_token`


a| [[quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.-id-.grant.expires-in-property]]`link:#quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.-id-.grant.expires-in-property[quarkus.oidc-client."id".grant.expires-in-property]`


[.description]
--
Access token expiry property name in a token grant response

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OIDC_CLIENT__ID__GRANT_EXPIRES_IN_PROPERTY+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OIDC_CLIENT__ID__GRANT_EXPIRES_IN_PROPERTY+++`
endif::add-copy-button-to-env-var[]
--|string 
|`expires_in`


a| [[quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.-id-.grant.refresh-expires-in-property]]`link:#quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.-id-.grant.refresh-expires-in-property[quarkus.oidc-client."id".grant.refresh-expires-in-property]`


[.description]
--
Refresh token expiry property name in a token grant response

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OIDC_CLIENT__ID__GRANT_REFRESH_EXPIRES_IN_PROPERTY+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OIDC_CLIENT__ID__GRANT_REFRESH_EXPIRES_IN_PROPERTY+++`
endif::add-copy-button-to-env-var[]
--|string 
|`refresh_expires_in`


a| [[quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.-id-.grant-options-grant-options]]`link:#quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.-id-.grant-options-grant-options[quarkus.oidc-client."id".grant-options]`


[.description]
--
Grant options

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OIDC_CLIENT__ID__GRANT_OPTIONS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OIDC_CLIENT__ID__GRANT_OPTIONS+++`
endif::add-copy-button-to-env-var[]
--|`Map<String,Map<String,String>>` 
|


a| [[quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.-id-.early-tokens-acquisition]]`link:#quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.-id-.early-tokens-acquisition[quarkus.oidc-client."id".early-tokens-acquisition]`


[.description]
--
Requires that all filters which use 'OidcClient' acquire the tokens at the post-construct initialization time, possibly long before these tokens are used. This property should be disabled if the access token may expire before it is used for the first time and no refresh token is available.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OIDC_CLIENT__ID__EARLY_TOKENS_ACQUISITION+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OIDC_CLIENT__ID__EARLY_TOKENS_ACQUISITION+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`true`


a| [[quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.-id-.headers-headers]]`link:#quarkus-oidc-client-oidc-clients-config_quarkus.oidc-client.-id-.headers-headers[quarkus.oidc-client."id".headers]`


[.description]
--
Custom HTTP headers which have to be sent to the token endpoint

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OIDC_CLIENT__ID__HEADERS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OIDC_CLIENT__ID__HEADERS+++`
endif::add-copy-button-to-env-var[]
--|`Map<String,String>` 
|

|===
ifndef::no-duration-note[]
[NOTE]
[id='duration-note-anchor-{summaryTableId}']
.About the Duration format
====
To write duration values, use the standard `java.time.Duration` format.
See the link:https://docs.oracle.com/en/java/javase/11/docs/api/java.base/java/time/Duration.html#parse(java.lang.CharSequence)[Duration#parse() javadoc] for more information.

You can also use a simplified format, starting with a number:

* If the value is only a number, it represents time in seconds.
* If the value is a number followed by `ms`, it represents time in milliseconds.

In other cases, the simplified format is translated to the `java.time.Duration` format for parsing:

* If the value is a number followed by `h`, `m`, or `s`, it is prefixed with `PT`.
* If the value is a number followed by `d`, it is prefixed with `P`.
====
endif::no-duration-note[]
